---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 31. 01. 2020
  Changes :
    - General code refactor
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 21. 01. 2020
  Changes :
    - Support 0.18
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 30. 12. 2019
  Changes :
    - Added thumbnail
    - Reordered changelog.txt
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 09. 07. 2019
  Changes :
    - Removing loop for setting accumulators collision box and fast replacable group.
    - Breaks being able to use upgrade planner to go from vanilla accumulators to FE+ accumulators
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 07. 01. 2019
  Changes :
    - Added check for bobpower and not update vanilla solar panel collision if installed, this mainly because of 0.17.53 update
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 03. 29. 2019
  Changes :
    - Renamed "electric-energy-accumulators-1" to "electric-energy-accumulators" because factorio 0.17.23 changed this
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 03. 10. 2019
  Changes :
    - Changing effectivity to 1 to match base game
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 03. 03. 2019
  Changes :
    - Updating graphics and properties
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 03. 01. 2019
  Changes :
    - Updating to work with 0.17