@@ -3,13 +3,18 @@
 -- maximum_wire_distance                    9           12          15
 -- supply_area_distance                     3.5         4.5         5.5
 --
-data.raw["electric-pole"]["medium-electric-pole"].fast_replaceable_group = "medium-electric-pole"
+-- If someone has already set the fast_replaceable_group lets use it too
+if not data.raw["electric-pole"]["medium-electric-pole"].fast_replaceable_group then
+    data.raw["electric-pole"]["medium-electric-pole"].fast_replaceable_group = "medium-electric-pole"
+end
+
 data.raw["electric-pole"]["medium-electric-pole"].next_upgrade = "medium-electric-pole-mk2"
 
 local mk2 = table.deepcopy(data.raw["electric-pole"]["medium-electric-pole"])
 mk2.name = "medium-electric-pole-mk2"
 mk2.icon = "__FactorioExtended-Plus-Power__/graphics/icons/" .. mk2.name .. ".png"
 mk2.icon_size = 32
+mk2.icon_mipmaps = nil
 mk2.minable.result = mk2.name
 mk2.max_health = 150
 mk2.next_upgrade = "medium-electric-pole-mk3"
@@ -24,6 +29,7 @@ local mk3 = table.deepcopy(data.raw["electric-pole"]["medium-electric-pole"])
 mk3.name = "medium-electric-pole-mk3"
 mk3.icon = "__FactorioExtended-Plus-Power__/graphics/icons/" .. mk3.name .. ".png"
 mk3.icon_size = 32
+mk3.icon_mipmaps = nil
 mk3.minable.result = mk3.name
 mk3.max_health = 200
 mk3.next_upgrade = nil
