@@ -3,13 +3,17 @@
 -- maximum_wire_distance                    18          28          42
 -- supply_area_distance                     9           14          21
 --
-data.raw["electric-pole"]["substation"].fast_replaceable_group = "electric-pole-2x2"
+-- If someone has already set the fast_replaceable_group lets use it too
+if not data.raw["electric-pole"]["substation"].fast_replaceable_group then
+    data.raw["electric-pole"]["substation"].fast_replaceable_group = "electric-pole-2x2"
+end
 data.raw["electric-pole"]["substation"].next_upgrade = "substation-mk2"
 
 local mk2 = table.deepcopy(data.raw["electric-pole"]["substation"])
 mk2.name = "substation-mk2"
 mk2.icon = "__FactorioExtended-Plus-Power__/graphics/icons/" .. mk2.name .. ".png"
 mk2.icon_size = 32
+mk2.icon_mipmaps = nil
 mk2.minable.result = mk2.name
 mk2.max_health = 400
 mk2.next_upgrade = "substation-mk3"
@@ -23,6 +27,7 @@ local mk3 = table.deepcopy(data.raw["electric-pole"]["substation"])
 mk3.name = "substation-mk3"
 mk3.icon = "__FactorioExtended-Plus-Power__/graphics/icons/" .. mk3.name .. ".png"
 mk3.icon_size = 32
+mk3.icon_mipmaps = nil
 mk3.minable.result = mk3.name
 mk3.max_health = 600
 mk3.next_upgrade = nil
